# sampi

./: .gitignore  CMakeLists.txt  README.md  build.sh  communicators.cc  communicators.h  fortran_headers.h  network_metrics.h  profiler.cc  profiler.h  pyproject.toml  rank_placement.h  rank_reorder.h  sampiboost.cc  sampiprofile.cc  sampistub.cc
benchmarks/configs/: archer2.cfg
benchmarks/graph500/: README.md  analyze_mega_archer2.py  analyze_mega_hamilton.py  launch_weak_scaling.sh  submit_experiment.sh  worker.sh
benchmarks/graph500/analysis/: analyse_archer2_results.py  analyse_results.py  plot_results.py
benchmarks/graph500/archer2/: launch_weak_scaling.sh  launch_weak_scaling_128core.sh  submit_experiment.sh  worker.sh
benchmarks/graph500/archer2-validation/: launch_weak_scaling.sh  launch_weak_scaling_128core.sh  submit_experiment.sh  worker.sh
benchmarks/graph500/archer2_stub_5x/: launch_weak_scaling.sh  launch_weak_scaling_128core.sh  launch_weak_scaling_64core.sh  parse_results.py  submit_experiment.sh  worker.sh
benchmarks/graph500/archer2_stub_5x_noblock/: launch_weak_scaling_128core.sh  launch_weak_scaling_64core.sh  submit_experiment.sh  worker.sh
benchmarks/graph500/archer2_stub_comparison/: launch_weak_scaling.sh  launch_weak_scaling_128core.sh  submit_experiment.sh  worker.sh
benchmarks/graph500/experiments/: 1node_scale20.conf  2node_scale21.conf  32node_scale25.conf  4node_scale22.conf  8node_scale23.conf  template_scale20.conf
benchmarks/openfoam/: dispatch.sh  monitor.sh  run_job.sh  setup.sh
(+84 files in other folders)
